// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component : ItemMenu Snapshot : not visible 1`] = `
<DocumentFragment>
  <div
    class="sc-gvZAcH caLhWR"
  >
    <div
      class="sc-kRRyDe btDgEC"
    >
      itemMenu.bringForward
    </div>
    <div
      class="sc-kRRyDe btDgEC"
    >
      itemMenu.sendBackward
    </div>
    <div
      class="sc-kRRyDe btDgEC"
    >
      itemMenu.remove
    </div>
  </div>
</DocumentFragment>
`;

exports[`Component : ItemMenu Snapshot : visible 1`] = `
<DocumentFragment>
  <div
    class="sc-gvZAcH jeDJSE"
  >
    <div
      class="sc-kRRyDe btDgEC"
    >
      itemMenu.bringForward
    </div>
    <div
      class="sc-kRRyDe btDgEC"
    >
      itemMenu.sendBackward
    </div>
    <div
      class="sc-kRRyDe btDgEC"
    >
      itemMenu.remove
    </div>
  </div>
</DocumentFragment>
`;
